Last commit of application.properties before git ignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.show-sql=true
 # Swagger UI
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+#Telegram implementation
+telegram.bot.username=RoomManagerBot
+telegram.bot.token=
