--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 #Telegram implementation
 telegram.bot.username=RoomManagerBot
-telegram.bot.token=
+telegram.bot.token="YOUR_TOKEN_HERE"
