--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 //	telegram
-	implementation 'org.telegram:telegrambots-spring-boot-starter:6.7.0'
+	implementation 'org.telegram:telegrambots:6.5.0'
+	implementation 'org.telegram:telegrambots-spring-boot-starter:6.5.0'
 }
 
 
