--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 #Telegram implementation
-telegram.bot.username=RoomManagerBot
-telegram.bot.token="YOUR_TOKEN_HERE"
+telegram.bot.username=${TELEGRAM_BOT_USERNAME}
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
