--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-#paste tokens only here and GitIgnore
+#paste tokens only here and add this file to GitIgnore
 TELEGRAM_BOT_USERNAME=
 TELEGRAM_BOT_TOKEN=
