--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
+# Telegram implementation
+telegram.bot.username=${TELEGRAM_BOT_USERNAME}
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+
+# Gemini/Vertex AI Configuration
+gemini.api.key=YOUR_GEMINI_API_KEY_GOES_HERE  # <-- YOU ARE MISSING THIS LINE
+gemini.project.id=your-gcp-project-id-here
+gemini.location=us-central1
+
+# Other properties...
 spring.application.name=RoomAPI
 spring.datasource.url=jdbc:postgresql://localhost:5432/roomdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# Swagger UI
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-
-#Telegram implementation
-telegram.bot.username=${TELEGRAM_BOT_USERNAME}
-telegram.bot.token=${TELEGRAM_BOT_TOKEN}
