--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 #Telegram implementation
 telegram.bot.username=${TELEGRAM_BOT_USERNAME}
 telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+
+
+#Gemini
+gemini.key=${GEMINI_KEY}
