--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 #Telegram implementation
 telegram.bot.username=${TELEGRAM_BOT_USERNAME}
 telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+
+spring.ai.vertex.ai.gemini.project-id=${GCP_PROJECT_ID}
+spring.ai.vertex.ai.gemini.location=${GCP_LOCATION}
+gemini.token=${GEMINI_TOKEN}
